less: Fix inlined post text cropping
close #463

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -52,11 +52,6 @@ code.code-tag {
 	white-space: pre-wrap;
 }
 
-.post-container {
-	display: inline-block;
-	width: 100%;
-}
-
 .embed {
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 4px;
